# uniswap-rs

./: Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml  lint.yml  test.yml
abi/: IERC20.json  ISwapRouter.json  IUniswapV2Factory.json  IUniswapV2Pair.json  IUniswapV2Router02.json  IUniswapV3Factory.json  IUniswapV3Pool.json  IUniversalRouter.json  IUniversalRouterCommands.json
examples/: Cargo.toml  custom_protocol.rs  dex.rs  liquidity.rs  pair.rs  simple.rs  swap.rs  weth.rs
examples/examples/: custom_protocol.rs  liquidity.rs  pair.rs  swap.rs  universal_router.rs
scripts/: examples.sh  router_cmds.js
src/: constants.rs  dex.rs  factory.rs  lib.rs  library.rs  macros.rs  pair.rs  protocol.rs  utils.rs
src/bindings/: i_swap_router.rs  i_uniswap_v2_factory.rs  i_uniswap_v2_pair.rs  i_uniswap_v2_router_02.rs  i_uniswap_v3_factory.rs  i_uniswap_v3_pool.rs  ierc20.rs  iweth.rs  mod.rs
src/common/: call.rs  constants.rs  errors.rs  mod.rs  token.rs  utils.rs
src/contracts/: addresses.json  addresses.rs  contracts.json  mod.rs
src/contracts/bindings/: i_swap_router.rs  i_uniswap_v2_factory.rs  i_uniswap_v2_pair.rs  i_uniswap_v2_router_02.rs  i_uniswap_v3_factory.rs  i_uniswap_v3_pool.rs  i_universal_router.rs  i_universal_router_commands.rs  ierc20.rs  iweth.rs  mod.rs
src/dex/: mod.rs  protocol.rs
src/protocol/: mod.rs  pair_code_hashes.rs  protocol_type.rs
src/universal_router/: mod.rs
src/v2/: factory.rs  library.rs  mod.rs  pair.rs  protocol.rs  router.rs
src/v3/: factory.rs  mod.rs  pool.rs  router.rs  swap_router.rs  universal_router.rs
