[package]
name = "uniswap-rs"
version = "0.2.1"
edition = "2021"
rust-version = "1.62"
authors = ["DaniPopes <danipopes1@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/danipopes/uniswap-rs"
homepage = "https://docs.rs/uniswap-rs"
description = "Unofficial Rust SDK library for Uniswap smart contracts."
keywords = ["dex", "uniswap", "sdk", "ethereum", "eth"]
exclude = [".github/", "abi/", "scripts/", "build.rs"]

[build-dependencies]
ethers-contract-abigen = { version = "1.0", default-features = false }
eyre = ">=0"
walkdir = ">=2"

[dependencies]
ethers = "1.0.2"
paste = "1.0"
thiserror = "1.0"

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
eyre = "0.6"

[features]
default = ["addresses"]
serde = ["dep:serde"]
addresses = ["serde", "serde_json"]

# [patch."https://github.com/gakonst/ethers-rs"]
# ethers = { git = "https://github.com/danipopes/ethers-rs" }
# ethers-contract = { git = "https://github.com/danipopes/ethers-rs" }

# ethers = { path = "../ethers-rs" }
# ethers-contract = { path = "../ethers-rs/ethers-contract" }
# ethers-core = { path = "../ethers-rs/ethers-core" }
# ethers-providers = { path = "../ethers-rs/ethers-providers" }
# ethers-signers = { path = "../ethers-rs/ethers-signers" }
# ethers-etherscan = { path = "../ethers-rs/ethers-etherscan" }
# ethers-solc = { path = "../ethers-rs/ethers-solc" }
